--- a/install.txt
+++ b/install.txt
@@ -17,6 +17,15 @@ npm install react-native-md5 --save
 
 npm install react-native-swiper --save
 
-npm install --save react-native-material-ripple --save
+npm install react-native-material-ripple --save
+
+npm remove react-native-orientation --save
+
+npm install react-native-orientation --save
+
+react-native link react-native-orientation
+
+
+react-native run-android --variant=release
 
 
